Overflowing body fixed

--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,9 +1,8 @@
 #app {
   text-align: center;
   height: 100%;
-  display: flex;
   flex-direction: column;
-  margin-top: 82px;
+  padding-top: 82px;
 
   > *:nth-child(2) {
     flex-grow: 1;
